Visual and dependency fixes
Fix bugs where the colors of some buttons and texts were not correctly displayed. Also deleted unused files and imports.

--- a/frontend/moviesitory/src/app/components/card/card.component.scss
+++ b/frontend/moviesitory/src/app/components/card/card.component.scss
@@ -18,3 +18,7 @@
   background: #1a1a1a !important;
   align-content: space-evenly !important;
 }
+
+.mat-mdc-button:not(:disabled) {
+  color: #a684ff !important;
+}
