--- a/frontend/moviesitory/src/app/components/card/card.component.html
+++ b/frontend/moviesitory/src/app/components/card/card.component.html
@@ -12,7 +12,7 @@
   <div class="flex flex-col h-full">
     <mat-card-content class="p-4 border-t border-gray-700">
       <div class="flex justify-right items-center mb-4">
-        <mat-icon color="warn" class="mr-3">star</mat-icon>
+        <mat-icon color="warn" class="mr-3">trending_up</mat-icon>
         <p class="display-1 font-bold no-margin">
           {{ data.popularity * 0.5 | number : "1.1-1" }}
         </p>
@@ -25,7 +25,7 @@
     </mat-card-content>
 
     <div class="mt-auto px-4 pb-4 flex flex-col">
-      <button mat-button class="w-full px-3 py-1 rounded">Ver detalles</button>
+      <button mat-button class="w-full px-3 py-1 rounded">See details</button>
     </div>
   </div>
 </mat-card>
