--- a/frontend/moviesitory/src/app/components/header/header.component.html
+++ b/frontend/moviesitory/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 <header
   class="bg-[#1E1E1E] border-b border-gray-700 p-4 flex justify-center items-center gap-30"
 >
-  <img src="assets/logo.png" alt="" class="w-20" />
+  <img src="assets/logo.png" alt="" class="w-20" (click)="clickLogo()" />
   <app-searchbar></app-searchbar>
   <button mat-button class="px-2">Sign In</button>
 </header>
