Card, Details and CRUD Components
Implemented the Card, Details and CRUD components, they completely work as expected.

--- a/frontend/moviesitory/src/styles.scss
+++ b/frontend/moviesitory/src/styles.scss
@@ -46,3 +46,7 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+.mat-mdc-button:not(:disabled),
+.text-color {
+  color: #a684ff !important;
+}
