--- a/frontend/moviesitory/src/app/components/card/card.component.html
+++ b/frontend/moviesitory/src/app/components/card/card.component.html
@@ -24,8 +24,10 @@
       </mat-card-title>
     </mat-card-content>
 
-    <div class="mt-auto px-4 pb-4 flex flex-col">
-      <button mat-button class="w-full px-3 py-1 rounded">See details</button>
+    <div class="mt-auto px-4 pb-4 flex flex-col" (click)="seeDetails()">
+      <button mat-button class="w-full px-3 py-1 rounded">
+        {{ !isAdd ? "See details" : "Add" }}
+      </button>
     </div>
   </div>
 </mat-card>
