--- a/frontend/moviesitory/src/app/pages/movies-search/movies-search.component.html
+++ b/frontend/moviesitory/src/app/pages/movies-search/movies-search.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="flex justify-center gap-4">
     <!-- Filters Panel -->
-    <div class="w-70 h-full p-4 border rounded shadow-sm">
+    <div class="w-70 h-full p-4 border-violet-200 rounded shadow-sm">
       <form [formGroup]="filterForm" (ngSubmit)="updateSearch()">
         <h4 class="mb-4 font-bold">Filters</h4>
 
@@ -73,7 +73,7 @@
     </div>
 
     <!-- Movies Grid -->
-    <div class="grid grid-cols-1 lg:grid-cols-{{ results }} gap-10 px-10">
+    <div class="grid grid-cols-4 lg:grid-cols-{{ results }} gap-10 px-10">
       <ng-container *ngFor="let movie of movies.movies; let i = index">
         <app-card [data]="movie"></app-card>
       </ng-container>
