--- a/frontend/moviesitory/src/app/components/searchbar/searchbar.component.html
+++ b/frontend/moviesitory/src/app/components/searchbar/searchbar.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="mb-[-3%] w-30" appearance="fill">
-  <mat-label>Filter</mat-label>
+  <mat-label class="text-color">Filter</mat-label>
   <mat-select [(value)]="selectedOption">
     @for (option of searchOptions; track option){
     <mat-option value="{{ option.value }}">
@@ -10,7 +10,7 @@
   </mat-select>
 </mat-form-field>
 <mat-form-field class="mb-[-3%] w-150" appearance="fill">
-  <mat-label>Search</mat-label>
+  <mat-label class="text-color">Search</mat-label>
   <input
     id="search"
     matInput
